--- a/PaintStoragev2MVC/Views/Paint/Index.cshtml
+++ b/PaintStoragev2MVC/Views/Paint/Index.cshtml
@@ -3,9 +3,9 @@
     ViewBag.Title = "Paint List";
 }
 
-<h2>Paint Operations</h2>
-
-<table id="paintTable" class="display">
+<h2>Paint Storage</h2>
+<a class="btn btn-success" style="margin-bottom:10px" onclick="PopupForm('@Url.Action("AddOrEdit","PaintDB")')"><i class="fa fa-plus"></i> Add New</a>
+<table id="paintTable" class="table table-striped table-bordered" style="width:100%">
     <thead>
         <tr>
             <th>RAL</th>
@@ -15,13 +15,16 @@
 </table>
 
 <link href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome-min.css" rel="stylesheet" />
 
 @section scripts{
     <script src="//cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
 
     <script>
+        var Popup, dataTable;
         $(document).ready(function () {
-            $("#paintTable").DataTable({
+            dataTable =  $("#paintTable").DataTable({
                 "ajax": {
                     "url": "/Paint/GetData",
                     "type": "GET",
@@ -29,12 +32,42 @@
                 },
                 "columns": [
                     { "data": "RAL" },
-                    { "data": "Storage" }               
-                    
-                ]
-                
+                    { "data": "Storage" },
+                    {"data":"PaintID" , "render" : function (data) {
+                        return "<a class='btn btn-default btn-sm' onclick=PopupForm('@Url.Action("AddOrEdit","PaintDB")/" + data + "')><i class='fa fa-pencil'></i> Edit</a><a class='btn btn-danger btn-sm' style='margin-left:5px' onclick=Delete("+data+")><i class='fa fa-trash'></i> Delete</a>";
+                    },
+                        "orderable": false,
+                        "searchable":false,
+                        "width":"150px"
+                    }
+
+                ],
+                "language": {
+
+                    "emptyTable" : "No data found, Please click on <b>Add New</b> Button"
+                }
             });
         });
+
+        function PopupForm(url) {
+            var formDiv = $('<div/>');
+            $.get(url)
+            .done(function (response) {
+                formDiv.html(response);
+
+                Popup = formDiv.dialog({
+                    autoOpen: true,
+                    resizable: false,
+                    title: 'Fill Paint Details',
+                    height: 500,
+                    width: 700,
+                    close: function () {
+                        Popup.dialog('destroy').remove();
+                    }
+
+                });
+            });
+        }
 
     </script>
 }
