--- a/PaintStoragev2MVC/Views/Shared/_Layout.cshtml
+++ b/PaintStoragev2MVC/Views/Shared/_Layout.cshtml
@@ -6,18 +6,20 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
 </head>
 <body>
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Paint Storage using Datatable Plugin - Kristij4n</p>
         </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    <script src="~/Scripts/jquery-ui-1.13.1.min.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
